--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.4.0",
-    "vue": "^3.2.47",
     "@vitejs/plugin-vue": "^4.1.0",
-    "vite": "^4.3.9"
+    "axios": "^1.4.0",
+    "vite": "^4.3.9",
+    "vue": "^3.2.47",
+    "vue-router": "^4.2.2"
   },
   "devDependencies": {
+    "@mdi/font": "^7.2.96",
     "eslint": "^8.42.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "vuetify": "^3.3.3"
   }
 }
