--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
     "axios": "^1.4.0",
+    "pinia": "^2.1.3",
     "vite": "^4.3.9",
     "vue": "^3.2.47",
     "vue-router": "^4.2.2"
